--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.28.0
 openai==1.3.0
-python-dotenv==1.0.0
-pandas==2.1.2
-numpy==1.26.1
-matplotlib==3.8.1
 PyPDF2==3.0.1
 python-docx==0.8.11
+random==3.0.1
+re==2.2.1
+base64==1.0.0
