--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.38.0
-openai==1.44.1
-Pillow==9.2.0
-pdf2image==1.16.3
-PyPDF2==3.0.1
-python-docx==1.1.2
+streamlit
+openai
+Pillow
+pdf2image
+pybase64
